Part 1: done with css, need to update other 2 html docs

--- a/Part1/The Project Gutenberg Book of The Adventures of Sherlock Holmes, by Arthur Conan Doyle.html
+++ b/Part1/The Project Gutenberg Book of The Adventures of Sherlock Holmes, by Arthur Conan Doyle.html
@@ -97,7 +97,7 @@ country where you are located before using this eBook.
 <div style="display:block; margin-left:2em; text-indent:-2em">Produced by: an anonymous Project Gutenberg volunteer and Jose Menendez</div>
 <div style="margin-top:2em; margin-bottom:4em">*** START OF THE PROJECT GUTENBERG EBOOK THE ADVENTURES OF SHERLOCK HOLMES ***</div>
 
-<table summary="" style="margin-right: auto; margin-left: auto" cellpadding="4" border="3">
+<table id = "altTable"summary="" style="margin-right: auto; margin-left: auto" cellpadding="4">
 <tbody><tr>
 <td>
 THERE IS AN ILLUSTRATED EDITION OF THIS TITLE WHICH MAY VIEWED AT EBOOK <big><b><a href="https://www.gutenberg.org/ebooks/48320">
@@ -121,51 +121,51 @@ THERE IS AN ILLUSTRATED EDITION OF THIS TITLE WHICH MAY VIEWED AT EBOOK <big><b>
 <table summary="" style="margin-right: auto; margin-left: auto">
 
 <tbody><tr>
-<td>I.</td><td> <a href="https://www.gutenberg.org/files/1661/1661-h/1661-h.htm#chap01">A Scandal in Bohemia</a></td>
+<td>I.</td><td> <a href="#chap01">A Scandal in Bohemia</a></td>
 </tr>
 
 <tr>
-<td>II.</td><td> <a href="https://www.gutenberg.org/files/1661/1661-h/1661-h.htm#chap02">The Red-Headed League</a></td>
+<td>II.</td><td> <a href="#chap02">The Red-Headed League</a></td>
 </tr>
 
 <tr>
-<td>III.</td><td> <a href="https://www.gutenberg.org/files/1661/1661-h/1661-h.htm#chap03">A Case of Identity</a></td>
+<td>III.</td><td> <a href="#chap03">A Case of Identity</a></td>
 </tr>
 
 <tr>
-<td>IV.</td><td> <a href="https://www.gutenberg.org/files/1661/1661-h/1661-h.htm#chap04">The Boscombe Valley Mystery</a></td>
+<td>IV.</td><td> <a href="#chap04">The Boscombe Valley Mystery</a></td>
 </tr>
 
 <tr>
-<td>V.</td><td> <a href="https://www.gutenberg.org/files/1661/1661-h/1661-h.htm#chap05">The Five Orange Pips</a></td>
+<td>V.</td><td> <a href="#chap05">The Five Orange Pips</a></td>
 </tr>
 
 <tr>
-<td>VI.</td><td> <a href="https://www.gutenberg.org/files/1661/1661-h/1661-h.htm#chap06">The Man with the Twisted Lip</a></td>
+<td>VI.</td><td> <a href="#chap06">The Man with the Twisted Lip</a></td>
 </tr>
 
 <tr>
-<td>VII.</td><td> <a href="https://www.gutenberg.org/files/1661/1661-h/1661-h.htm#chap07">The Adventure of the Blue Carbuncle</a></td>
+<td>VII.</td><td> <a href="#chap07">The Adventure of the Blue Carbuncle</a></td>
 </tr>
 
 <tr>
-<td>VIII.</td><td> <a href="https://www.gutenberg.org/files/1661/1661-h/1661-h.htm#chap08">The Adventure of the Speckled Band</a></td>
+<td>VIII.</td><td> <a href="#chap08">The Adventure of the Speckled Band</a></td>
 </tr>
 
 <tr>
-<td>IX.</td><td> <a href="https://www.gutenberg.org/files/1661/1661-h/1661-h.htm#chap09">The Adventure of the Engineer’s Thumb</a></td>
+<td>IX.</td><td> <a href="#chap09">The Adventure of the Engineer’s Thumb</a></td>
 </tr>
 
 <tr>
-<td>X.</td><td> <a href="https://www.gutenberg.org/files/1661/1661-h/1661-h.htm#chap10">The Adventure of the Noble Bachelor</a></td>
+<td>X.</td><td> <a href="#chap10">The Adventure of the Noble Bachelor</a></td>
 </tr>
 
 <tr>
-<td>XI.</td><td> <a href="https://www.gutenberg.org/files/1661/1661-h/1661-h.htm#chap11">The Adventure of the Beryl Coronet</a></td>
+<td>XI.</td><td> <a href="#chap11">The Adventure of the Beryl Coronet</a></td>
 </tr>
 
 <tr>
-<td>XII.</td><td> <a href="https://www.gutenberg.org/files/1661/1661-h/1661-h.htm#chap12">The Adventure of the Copper Beeches</a></td>
+<td>XII.</td><td> <a href="#chap12">The Adventure of the Copper Beeches</a></td>
 </tr>
 
 </tbody></table>
