Part 1: fixing the mistake i made last commit

--- a/Part1/The Project Gutenberg eBook of Pride and Prejudice, by Jane Austen.html
+++ b/Part1/The Project Gutenberg eBook of Pride and Prejudice, by Jane Austen.html
@@ -1,61 +1,12 @@
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Strict//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-strict.dtd">
-<!-- saved from url=(0054)https://www.gutenberg.org/files/1342/1342-h/1342-h.htm -->
+<!-- saved from url=(0054) -->
 <html xmlns="http://www.w3.org/1999/xhtml" xml:lang="en" lang="en"><head><meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
 
 <meta http-equiv="Content-Style-Type" content="text/css">
+<link rel="stylesheet" type="text/css" href="gutenberg.css"/>
 <title>The Project Gutenberg eBook of Pride and Prejudice, by Jane Austen</title>
-<link rel="coverpage" href="./The Project Gutenberg eBook of Pride and Prejudice, by Jane Austen_files/cover.jpg">
-<style type="text/css">
+<link rel="coverpage" href="./Images/prideAndPrejudiceCover.jpg">
 
-body { margin-left: 20%;
-       margin-right: 20%;
-       text-align: justify }
-
-h1, h2 {text-align: center; font-style: normal; font-weight:
-normal; line-height: 1.5; margin-top: .5em; margin-bottom: .5em;}
-
-h1 {font-size: 300%;
-    margin-top: 0.6em;
-    margin-bottom: 0.6em;
-    letter-spacing: 0.12em;
-    word-spacing: 0.2em;
-    text-indent: 0em;}
-h2 {font-size: 150%; margin-top: 2em; margin-bottom: 1em;}
-
-.no-break {page-break-before: avoid;} /* for epubs */
-
-div.chapter {page-break-before: always; margin-top: 4em;}
-
-hr {width: 80%; margin-top: 2em; margin-bottom: 2em;}
-
-p {text-indent: 1em;
-   margin-top: 0.25em;
-   margin-bottom: 0.25em; }
-
-.p2 {margin-top: 2em;}
-
-p.letter {text-indent: 0%;
-          margin-left: 5%;
-          margin-right: 5%;
-          margin-top: 1em;
-          margin-bottom: 1em; }
-
-p.right {text-align: right;
-         margin-right: 10%;
-         margin-top: 1em;
-         margin-bottom: 1em; }
-
-div.fig { display:block;
-          margin:0 auto;
-          text-align:center;
-          margin-top: 1em;
-          margin-bottom: 1em;}
-
-a:link {color:blue; text-decoration:none}
-a:visited {color:blue; text-decoration:none}
-a:hover {color:red}
-
-</style>
 
 </head>
 
@@ -80,7 +31,7 @@ country where you are located before using this eBook.
 <div style="display:block; margin-left:2em; text-indent:-2em">Produced by: Anonymous Volunteers and David Widger</div>
 <div style="margin-top:2em; margin-bottom:4em">*** START OF THE PROJECT GUTENBERG EBOOK PRIDE AND PREJUDICE ***</div>
 
-<table summary="" style="margin-right: auto; margin-left: auto" cellpadding="4" border="3">
+<table id="altTable" summary="" style="margin-right: auto; margin-left: auto" cellpadding="4">
 <tbody><tr>
 <td>
 THERE IS AN ILLUSTRATED EDITION OF THIS TITLE WHICH MAY VIEWED AT EBOOK <big><b><a href="https://www.gutenberg.org/ebooks/42671">
@@ -90,7 +41,7 @@ THERE IS AN ILLUSTRATED EDITION OF THIS TITLE WHICH MAY VIEWED AT EBOOK <big><b>
 </tbody></table>
 
 <div class="fig" style="width:60%;">
-<img src="./The Project Gutenberg eBook of Pride and Prejudice, by Jane Austen_files/cover.jpg" style="width:100%;" alt="cover">
+<img src="./Images/prideAndPrejudiceCover.jpg" style="width:100%;" alt="cover">
 </div>
 
 <h1>Pride and Prejudice</h1>
@@ -104,247 +55,247 @@ THERE IS AN ILLUSTRATED EDITION OF THIS TITLE WHICH MAY VIEWED AT EBOOK <big><b>
 <table summary="" style="">
 
 <tbody><tr>
-<td> <a href="https://www.gutenberg.org/files/1342/1342-h/1342-h.htm#link2HCH0001"> Chapter 1</a></td>
+<td> <a href="#link2HCH0001"> Chapter 1</a></td>
 </tr>
 
 <tr>
-<td> <a href="https://www.gutenberg.org/files/1342/1342-h/1342-h.htm#link2HCH0002"> Chapter 2</a></td>
+<td> <a href="#link2HCH0002"> Chapter 2</a></td>
 </tr>
 
 <tr>
-<td> <a href="https://www.gutenberg.org/files/1342/1342-h/1342-h.htm#link2HCH0003"> Chapter 3</a></td>
+<td> <a href="#link2HCH0003"> Chapter 3</a></td>
 </tr>
 
 <tr>
-<td> <a href="https://www.gutenberg.org/files/1342/1342-h/1342-h.htm#link2HCH0004"> Chapter 4</a></td>
+<td> <a href="#link2HCH0004"> Chapter 4</a></td>
 </tr>
 
 <tr>
-<td> <a href="https://www.gutenberg.org/files/1342/1342-h/1342-h.htm#link2HCH0005"> Chapter 5</a></td>
+<td> <a href="#link2HCH0005"> Chapter 5</a></td>
 </tr>
 
 <tr>
-<td> <a href="https://www.gutenberg.org/files/1342/1342-h/1342-h.htm#link2HCH0006"> Chapter 6</a></td>
+<td> <a href="#link2HCH0006"> Chapter 6</a></td>
 </tr>
 
 <tr>
-<td> <a href="https://www.gutenberg.org/files/1342/1342-h/1342-h.htm#link2HCH0007"> Chapter 7</a></td>
+<td> <a href="#link2HCH0007"> Chapter 7</a></td>
 </tr>
 
 <tr>
-<td> <a href="https://www.gutenberg.org/files/1342/1342-h/1342-h.htm#link2HCH0008"> Chapter 8</a></td>
+<td> <a href="#link2HCH0008"> Chapter 8</a></td>
 </tr>
 
 <tr>
-<td> <a href="https://www.gutenberg.org/files/1342/1342-h/1342-h.htm#link2HCH0009"> Chapter 9</a></td>
+<td> <a href="#link2HCH0009"> Chapter 9</a></td>
 </tr>
 
 <tr>
-<td> <a href="https://www.gutenberg.org/files/1342/1342-h/1342-h.htm#link2HCH0010"> Chapter 10</a></td>
+<td> <a href="#link2HCH0010"> Chapter 10</a></td>
 </tr>
 
 <tr>
-<td> <a href="https://www.gutenberg.org/files/1342/1342-h/1342-h.htm#link2HCH0011"> Chapter 11</a></td>
+<td> <a href="#link2HCH0011"> Chapter 11</a></td>
 </tr>
 
 <tr>
-<td> <a href="https://www.gutenberg.org/files/1342/1342-h/1342-h.htm#link2HCH0012"> Chapter 12</a></td>
+<td> <a href="#link2HCH0012"> Chapter 12</a></td>
 </tr>
 
 <tr>
-<td> <a href="https://www.gutenberg.org/files/1342/1342-h/1342-h.htm#link2HCH0013"> Chapter 13</a></td>
+<td> <a href="#link2HCH0013"> Chapter 13</a></td>
 </tr>
 
 <tr>
-<td> <a href="https://www.gutenberg.org/files/1342/1342-h/1342-h.htm#link2HCH0014"> Chapter 14</a></td>
+<td> <a href="#link2HCH0014"> Chapter 14</a></td>
 </tr>
 
 <tr>
-<td> <a href="https://www.gutenberg.org/files/1342/1342-h/1342-h.htm#link2HCH0015"> Chapter 15</a></td>
+<td> <a href="#link2HCH0015"> Chapter 15</a></td>
 </tr>
 
 <tr>
-<td> <a href="https://www.gutenberg.org/files/1342/1342-h/1342-h.htm#link2HCH0016"> Chapter 16</a></td>
+<td> <a href="#link2HCH0016"> Chapter 16</a></td>
 </tr>
 
 <tr>
-<td> <a href="https://www.gutenberg.org/files/1342/1342-h/1342-h.htm#link2HCH0017"> Chapter 17</a></td>
+<td> <a href="#link2HCH0017"> Chapter 17</a></td>
 </tr>
 
 <tr>
-<td> <a href="https://www.gutenberg.org/files/1342/1342-h/1342-h.htm#link2HCH0018"> Chapter 18</a></td>
+<td> <a href="#link2HCH0018"> Chapter 18</a></td>
 </tr>
 
 <tr>
-<td> <a href="https://www.gutenberg.org/files/1342/1342-h/1342-h.htm#link2HCH0019"> Chapter 19</a></td>
+<td> <a href="#link2HCH0019"> Chapter 19</a></td>
 </tr>
 
 <tr>
-<td> <a href="https://www.gutenberg.org/files/1342/1342-h/1342-h.htm#link2HCH0020"> Chapter 20</a></td>
+<td> <a href="#link2HCH0020"> Chapter 20</a></td>
 </tr>
 
 <tr>
-<td> <a href="https://www.gutenberg.org/files/1342/1342-h/1342-h.htm#link2HCH0021"> Chapter 21</a></td>
+<td> <a href="#link2HCH0021"> Chapter 21</a></td>
 </tr>
 
 <tr>
-<td> <a href="https://www.gutenberg.org/files/1342/1342-h/1342-h.htm#link2HCH0022"> Chapter 22</a></td>
+<td> <a href="#link2HCH0022"> Chapter 22</a></td>
 </tr>
 
 <tr>
-<td> <a href="https://www.gutenberg.org/files/1342/1342-h/1342-h.htm#link2HCH0023"> Chapter 23</a></td>
+<td> <a href="#link2HCH0023"> Chapter 23</a></td>
 </tr>
 
 <tr>
-<td> <a href="https://www.gutenberg.org/files/1342/1342-h/1342-h.htm#link2HCH0024"> Chapter 24</a></td>
+<td> <a href="#link2HCH0024"> Chapter 24</a></td>
 </tr>
 
 <tr>
-<td> <a href="https://www.gutenberg.org/files/1342/1342-h/1342-h.htm#link2HCH0025"> Chapter 25</a></td>
+<td> <a href="#link2HCH0025"> Chapter 25</a></td>
 </tr>
 
 <tr>
-<td> <a href="https://www.gutenberg.org/files/1342/1342-h/1342-h.htm#link2HCH0026"> Chapter 26</a></td>
+<td> <a href="#link2HCH0026"> Chapter 26</a></td>
 </tr>
 
 <tr>
-<td> <a href="https://www.gutenberg.org/files/1342/1342-h/1342-h.htm#link2HCH0027"> Chapter 27</a></td>
+<td> <a href="#link2HCH0027"> Chapter 27</a></td>
 </tr>
 
 <tr>
-<td> <a href="https://www.gutenberg.org/files/1342/1342-h/1342-h.htm#link2HCH0028"> Chapter 28</a></td>
+<td> <a href="#link2HCH0028"> Chapter 28</a></td>
 </tr>
 
 <tr>
-<td> <a href="https://www.gutenberg.org/files/1342/1342-h/1342-h.htm#link2HCH0029"> Chapter 29</a></td>
+<td> <a href="#link2HCH0029"> Chapter 29</a></td>
 </tr>
 
 <tr>
-<td> <a href="https://www.gutenberg.org/files/1342/1342-h/1342-h.htm#link2HCH0030"> Chapter 30</a></td>
+<td> <a href="#link2HCH0030"> Chapter 30</a></td>
 </tr>
 
 <tr>
-<td> <a href="https://www.gutenberg.org/files/1342/1342-h/1342-h.htm#link2HCH0031"> Chapter 31</a></td>
+<td> <a href="#link2HCH0031"> Chapter 31</a></td>
 </tr>
 
 <tr>
-<td> <a href="https://www.gutenberg.org/files/1342/1342-h/1342-h.htm#link2HCH0032"> Chapter 32</a></td>
+<td> <a href="#link2HCH0032"> Chapter 32</a></td>
 </tr>
 
 <tr>
-<td> <a href="https://www.gutenberg.org/files/1342/1342-h/1342-h.htm#link2HCH0033"> Chapter 33</a></td>
+<td> <a href="#link2HCH0033"> Chapter 33</a></td>
 </tr>
 
 <tr>
-<td> <a href="https://www.gutenberg.org/files/1342/1342-h/1342-h.htm#link2HCH0034"> Chapter 34</a></td>
+<td> <a href="#link2HCH0034"> Chapter 34</a></td>
 </tr>
 
 <tr>
-<td> <a href="https://www.gutenberg.org/files/1342/1342-h/1342-h.htm#link2HCH0035"> Chapter 35</a></td>
+<td> <a href="#link2HCH0035"> Chapter 35</a></td>
 </tr>
 
 <tr>
-<td> <a href="https://www.gutenberg.org/files/1342/1342-h/1342-h.htm#link2HCH0036"> Chapter 36</a></td>
+<td> <a href="#link2HCH0036"> Chapter 36</a></td>
 </tr>
 
 <tr>
-<td> <a href="https://www.gutenberg.org/files/1342/1342-h/1342-h.htm#link2HCH0037"> Chapter 37</a></td>
+<td> <a href="#link2HCH0037"> Chapter 37</a></td>
 </tr>
 
 <tr>
-<td> <a href="https://www.gutenberg.org/files/1342/1342-h/1342-h.htm#link2HCH0038"> Chapter 38</a></td>
+<td> <a href="#link2HCH0038"> Chapter 38</a></td>
 </tr>
 
 <tr>
-<td> <a href="https://www.gutenberg.org/files/1342/1342-h/1342-h.htm#link2HCH0039"> Chapter 39</a></td>
+<td> <a href="#link2HCH0039"> Chapter 39</a></td>
 </tr>
 
 <tr>
-<td> <a href="https://www.gutenberg.org/files/1342/1342-h/1342-h.htm#link2HCH0040"> Chapter 40</a></td>
+<td> <a href="#link2HCH0040"> Chapter 40</a></td>
 </tr>
 
 <tr>
-<td> <a href="https://www.gutenberg.org/files/1342/1342-h/1342-h.htm#link2HCH0041"> Chapter 41</a></td>
+<td> <a href="#link2HCH0041"> Chapter 41</a></td>
 </tr>
 
 <tr>
-<td> <a href="https://www.gutenberg.org/files/1342/1342-h/1342-h.htm#link2HCH0042"> Chapter 42</a></td>
+<td> <a href="#link2HCH0042"> Chapter 42</a></td>
 </tr>
 
 <tr>
-<td> <a href="https://www.gutenberg.org/files/1342/1342-h/1342-h.htm#link2HCH0043"> Chapter 43</a></td>
+<td> <a href="#link2HCH0043"> Chapter 43</a></td>
 </tr>
 
 <tr>
-<td> <a href="https://www.gutenberg.org/files/1342/1342-h/1342-h.htm#link2HCH0044"> Chapter 44</a></td>
+<td> <a href="#link2HCH0044"> Chapter 44</a></td>
 </tr>
 
 <tr>
-<td> <a href="https://www.gutenberg.org/files/1342/1342-h/1342-h.htm#link2HCH0045"> Chapter 45</a></td>
+<td> <a href="#link2HCH0045"> Chapter 45</a></td>
 </tr>
 
 <tr>
-<td> <a href="https://www.gutenberg.org/files/1342/1342-h/1342-h.htm#link2HCH0046"> Chapter 46</a></td>
+<td> <a href="#link2HCH0046"> Chapter 46</a></td>
 </tr>
 
 <tr>
-<td> <a href="https://www.gutenberg.org/files/1342/1342-h/1342-h.htm#link2HCH0047"> Chapter 47</a></td>
+<td> <a href="#link2HCH0047"> Chapter 47</a></td>
 </tr>
 
 <tr>
-<td> <a href="https://www.gutenberg.org/files/1342/1342-h/1342-h.htm#link2HCH0048"> Chapter 48</a></td>
+<td> <a href="#link2HCH0048"> Chapter 48</a></td>
 </tr>
 
 <tr>
-<td> <a href="https://www.gutenberg.org/files/1342/1342-h/1342-h.htm#link2HCH0049"> Chapter 49</a></td>
+<td> <a href="#link2HCH0049"> Chapter 49</a></td>
 </tr>
 
 <tr>
-<td> <a href="https://www.gutenberg.org/files/1342/1342-h/1342-h.htm#link2HCH0050"> Chapter 50</a></td>
+<td> <a href="#link2HCH0050"> Chapter 50</a></td>
 </tr>
 
 <tr>
-<td> <a href="https://www.gutenberg.org/files/1342/1342-h/1342-h.htm#link2HCH0051"> Chapter 51</a></td>
+<td> <a href="#link2HCH0051"> Chapter 51</a></td>
 </tr>
 
 <tr>
-<td> <a href="https://www.gutenberg.org/files/1342/1342-h/1342-h.htm#link2HCH0052"> Chapter 52</a></td>
+<td> <a href="#link2HCH0052"> Chapter 52</a></td>
 </tr>
 
 <tr>
-<td> <a href="https://www.gutenberg.org/files/1342/1342-h/1342-h.htm#link2HCH0053"> Chapter 53</a></td>
+<td> <a href="#link2HCH0053"> Chapter 53</a></td>
 </tr>
 
 <tr>
-<td> <a href="https://www.gutenberg.org/files/1342/1342-h/1342-h.htm#link2HCH0054"> Chapter 54</a></td>
+<td> <a href="#link2HCH0054"> Chapter 54</a></td>
 </tr>
 
 <tr>
-<td> <a href="https://www.gutenberg.org/files/1342/1342-h/1342-h.htm#link2HCH0055"> Chapter 55</a></td>
+<td> <a href="#link2HCH0055"> Chapter 55</a></td>
 </tr>
 
 <tr>
-<td> <a href="https://www.gutenberg.org/files/1342/1342-h/1342-h.htm#link2HCH0056"> Chapter 56</a></td>
+<td> <a href="#link2HCH0056"> Chapter 56</a></td>
 </tr>
 
 <tr>
-<td> <a href="https://www.gutenberg.org/files/1342/1342-h/1342-h.htm#link2HCH0057"> Chapter 57</a></td>
+<td> <a href="#link2HCH0057"> Chapter 57</a></td>
 </tr>
 
 <tr>
-<td> <a href="https://www.gutenberg.org/files/1342/1342-h/1342-h.htm#link2HCH0058"> Chapter 58</a></td>
+<td> <a href="#link2HCH0058"> Chapter 58</a></td>
 </tr>
 
 <tr>
-<td> <a href="https://www.gutenberg.org/files/1342/1342-h/1342-h.htm#link2HCH0059"> Chapter 59</a></td>
+<td> <a href="#link2HCH0059"> Chapter 59</a></td>
 </tr>
 
 <tr>
-<td> <a href="https://www.gutenberg.org/files/1342/1342-h/1342-h.htm#link2HCH0060"> Chapter 60</a></td>
+<td> <a href="#link2HCH0060"> Chapter 60</a></td>
 </tr>
 
 <tr>
-<td> <a href="https://www.gutenberg.org/files/1342/1342-h/1342-h.htm#link2HCH0061"> Chapter 61</a></td>
+<td> <a href="#link2HCH0061"> Chapter 61</a></td>
 </tr>
 
 </tbody></table>
