--- a/Part1/The Project Gutenberg eBook of Frankenstein, by Mary Wollstonecraft (Godwin) Shelley.html
+++ b/Part1/The Project Gutenberg eBook of Frankenstein, by Mary Wollstonecraft (Godwin) Shelley.html
@@ -1,67 +1,12 @@
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Strict//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-strict.dtd">
-<!-- saved from url=(0048)https://www.gutenberg.org/files/84/84-h/84-h.htm -->
+<!-- saved from url=(0048) -->
 <html xmlns="http://www.w3.org/1999/xhtml" xml:lang="en" lang="en"><head><meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
 
 <meta http-equiv="Content-Style-Type" content="text/css">
+<link rel="stylesheet" type="text/css" href="gutenberg.css"/>
 <title>The Project Gutenberg eBook of Frankenstein, by Mary Wollstonecraft (Godwin) Shelley</title>
 
-<style type="text/css">
 
-body { margin-left: 20%;
-       margin-right: 20%;
-       text-align: justify; }
-
-h1, h2, h3, h4, h5 {text-align: center; font-style: normal; font-weight:
-normal; line-height: 1.5; margin-top: .5em; margin-bottom: .5em;}
-
-h1 {font-size: 300%;
-    margin-top: 0.6em;
-    margin-bottom: 0.6em;
-    letter-spacing: 0.12em;
-    word-spacing: 0.2em;
-    text-indent: 0em;}
-h2 {font-size: 150%; margin-top: 2em; margin-bottom: 1em;}
-h3 {font-size: 130%; margin-top: 1em;}
-h4 {font-size: 120%;}
-h5 {font-size: 110%;}
-
-.no-break {page-break-before: avoid;} /* for epubs */
-
-div.chapter {page-break-before: always; margin-top: 4em;}
-
-hr {width: 80%; margin-top: 2em; margin-bottom: 2em;}
-
-p {text-indent: 1em;
-   margin-top: 0.25em;
-   margin-bottom: 0.25em; }
-
-p.poem {text-indent: 0%;
-        margin-left: 10%;
-        font-size: 90%;
-        margin-top: 1em;
-        margin-bottom: 1em; }
-
-p.letter {text-indent: 0%;
-          margin-top: 1.5em;
-          margin-left: 10%;
-          margin-right: 10%; }
-
-p.letter2 {text-align: center;
-           margin-top: 1em;
-           margin-bottom: 1em; }
-
-p.right {text-align: right;
-         margin-right: 10%;
-         margin-top: 1em;
-         margin-bottom: 1em; }
-
-p.noindent {text-indent: 0% }
-
-a:link {color:blue; text-decoration:none}
-a:visited {color:blue; text-decoration:none}
-a:hover {color:red}
-
-</style>
 
 </head>
 
@@ -106,169 +51,169 @@ CONTENTS
 
 <tbody><tr>
 <td>
-<a href="https://www.gutenberg.org/files/84/84-h/84-h.htm#letter1">Letter 1</a>
+<a href="#letter1">Letter 1</a>
 </td>
 </tr>
 
 <tr>
 <td>
-<a href="https://www.gutenberg.org/files/84/84-h/84-h.htm#letter2">Letter 2</a>
+<a href="#letter2">Letter 2</a>
 </td>
 </tr>
 
 <tr>
 <td>
-<a href="https://www.gutenberg.org/files/84/84-h/84-h.htm#letter3">Letter 3</a>
+<a href="#letter3">Letter 3</a>
 </td>
 </tr>
 
 <tr>
 <td>
-<a href="https://www.gutenberg.org/files/84/84-h/84-h.htm#letter4">Letter 4</a>
+<a href="#letter4">Letter 4</a>
 </td>
 </tr>
 
 <tr>
 <td>
-<a href="https://www.gutenberg.org/files/84/84-h/84-h.htm#chap01">Chapter 1</a>
+<a href="#chap01">Chapter 1</a>
 </td>
 </tr>
 
 <tr>
 <td>
-<a href="https://www.gutenberg.org/files/84/84-h/84-h.htm#chap02">Chapter 2</a>
+<a href="#chap02">Chapter 2</a>
 </td>
 </tr>
 
 <tr>
 <td>
-<a href="https://www.gutenberg.org/files/84/84-h/84-h.htm#chap03">Chapter 3</a>
+<a href="#chap03">Chapter 3</a>
 </td>
 </tr>
 
 <tr>
 <td>
-<a href="https://www.gutenberg.org/files/84/84-h/84-h.htm#chap04">Chapter 4</a>
+<a href="#chap04">Chapter 4</a>
 </td>
 </tr>
 
 <tr>
 <td>
-<a href="https://www.gutenberg.org/files/84/84-h/84-h.htm#chap05">Chapter 5</a>
+<a href="#chap05">Chapter 5</a>
 </td>
 </tr>
 
 <tr>
 <td>
-<a href="https://www.gutenberg.org/files/84/84-h/84-h.htm#chap06">Chapter 6</a>
+<a href="#chap06">Chapter 6</a>
 </td>
 </tr>
 
 <tr>
 <td>
-<a href="https://www.gutenberg.org/files/84/84-h/84-h.htm#chap07">Chapter 7</a>
+<a href="#chap07">Chapter 7</a>
 </td>
 </tr>
 
 <tr>
 <td>
-<a href="https://www.gutenberg.org/files/84/84-h/84-h.htm#chap08">Chapter 8</a>
+<a href="#chap08">Chapter 8</a>
 </td>
 </tr>
 
 <tr>
 <td>
-<a href="https://www.gutenberg.org/files/84/84-h/84-h.htm#chap09">Chapter 9</a>
+<a href="#chap09">Chapter 9</a>
 </td>
 </tr>
 
 <tr>
 <td>
-<a href="https://www.gutenberg.org/files/84/84-h/84-h.htm#chap10">Chapter 10</a>
+<a href="#chap10">Chapter 10</a>
 </td>
 </tr>
 
 <tr>
 <td>
-<a href="https://www.gutenberg.org/files/84/84-h/84-h.htm#chap11">Chapter 11</a>
+<a href="#chap11">Chapter 11</a>
 </td>
 </tr>
 
 <tr>
 <td>
-<a href="https://www.gutenberg.org/files/84/84-h/84-h.htm#chap12">Chapter 12</a>
+<a href="#chap12">Chapter 12</a>
 </td>
 </tr>
 
 <tr>
 <td>
-<a href="https://www.gutenberg.org/files/84/84-h/84-h.htm#chap13">Chapter 13</a>
+<a href="#chap13">Chapter 13</a>
 </td>
 </tr>
 
 <tr>
 <td>
-<a href="https://www.gutenberg.org/files/84/84-h/84-h.htm#chap14">Chapter 14</a>
+<a href="#chap14">Chapter 14</a>
 </td>
 </tr>
 
 <tr>
 <td>
-<a href="https://www.gutenberg.org/files/84/84-h/84-h.htm#chap15">Chapter 15</a>
+<a href="#chap15">Chapter 15</a>
 </td>
 </tr>
 
 <tr>
 <td>
-<a href="https://www.gutenberg.org/files/84/84-h/84-h.htm#chap16">Chapter 16</a>
+<a href="#chap16">Chapter 16</a>
 </td>
 </tr>
 
 <tr>
 <td>
-<a href="https://www.gutenberg.org/files/84/84-h/84-h.htm#chap17">Chapter 17</a>
+<a href="#chap17">Chapter 17</a>
 </td>
 </tr>
 
 <tr>
 <td>
-<a href="https://www.gutenberg.org/files/84/84-h/84-h.htm#chap18">Chapter 18</a>
+<a href="#chap18">Chapter 18</a>
 </td>
 </tr>
 
 <tr>
 <td>
-<a href="https://www.gutenberg.org/files/84/84-h/84-h.htm#chap19">Chapter 19</a>
+<a href="#chap19">Chapter 19</a>
 </td>
 </tr>
 
 <tr>
 <td>
-<a href="https://www.gutenberg.org/files/84/84-h/84-h.htm#chap20">Chapter 20</a>
+<a href="#chap20">Chapter 20</a>
 </td>
 </tr>
 
 <tr>
 <td>
-<a href="https://www.gutenberg.org/files/84/84-h/84-h.htm#chap21">Chapter 21</a>
+<a href="#chap21">Chapter 21</a>
 </td>
 </tr>
 
 <tr>
 <td>
-<a href="https://www.gutenberg.org/files/84/84-h/84-h.htm#chap22">Chapter 22</a>
+<a href="#chap22">Chapter 22</a>
 </td>
 </tr>
 
 <tr>
 <td>
-<a href="https://www.gutenberg.org/files/84/84-h/84-h.htm#chap23">Chapter 23</a>
+<a href="#chap23">Chapter 23</a>
 </td>
 </tr>
 
 <tr>
 <td>
-<a href="https://www.gutenberg.org/files/84/84-h/84-h.htm#chap24">Chapter 24</a>
+<a href="#chap24">Chapter 24</a>
 </td>
 </tr>
 
