--- a/homepage/good.html
+++ b/homepage/good.html
@@ -2,7 +2,7 @@
 <html lang="en">
     <head>
         <meta content="text/html" charset="UTF-8">
-        <link rel="stylesheet" type="text/css" href="./good.css"/>
+        <link rel="stylesheet" type="text/css" href="good.css"/>
     </head>
     <body>
         <div id="page">
