Part2: Changed some colors and some text formatting

--- a/homepage/good.html
+++ b/homepage/good.html
@@ -40,7 +40,7 @@
                 <div class="content" id="about">
                     <h2>Who I Am</h2>
                     <img id="me" src="./Images/me.jpg" alt="Picture of myself">
-                    <p>I am a computing science student at University of Alberta who is working towards becoming a software developer. 
+                    <p id="bio">I am a computing science student at University of Alberta who is working towards becoming a software developer. 
                         In my free time I love to play video games with my friends. 
                         Another hobby of mine is finding new music to listen to. 
                         My favorite genres are Rap, Metal, and EDM. 
