Part2: Almost done main page css, just need to fix overflow issue

--- a/homepage/good.html
+++ b/homepage/good.html
@@ -39,17 +39,19 @@
                 </div>
                 <div class="content" id="about">
                     <h2 class="contentHeader">Who I Am</h2>
-                    <img id="me" src="./Images/me.jpg" alt="Picture of myself">
-                    <p id="bio">I am a computing science student at University of Alberta who is working towards becoming a software developer. 
-                        In my free time I love to play video games with my friends. 
-                        Another hobby of mine is finding new music to listen to. 
-                        My favorite genres are Rap, Metal, and EDM. 
-                    </p>
+                    <div id="aboutItem">
+                        <img id="me" src="./Images/me.jpg" alt="Picture of myself">
+                        <p id="bio">I am a computing science student at University of Alberta who is working towards becoming a software developer. 
+                            In my free time I love to play video games with my friends. 
+                            Another hobby of mine is finding new music to listen to. 
+                            My favorite genres are Rap, Metal, and EDM. 
+                        </p>
+                    </div>
                 </div>
 
                 <div class="content" id="history">
                     <h2 class="contentHeader">Professional History</h2>
-                    <div id="projects">
+                    <div class="historyGroup">
                         <h3 class="subHeader">Projects</h3>
                         <div class="historyItem">
                             <h4 class="title">Speed Sail</h4>
@@ -67,7 +69,7 @@
                         </div>
                     </div>
 
-                    <div class="content" id="experience">
+                    <div class="historyGroup">
                         <h3 class="subHeader">Work experience</h3>
                         <div class="historyItem">
                             <h4 class="title">Data Entery Clerk - TalentMap - Summer 2019</h4>
@@ -87,15 +89,17 @@
 
                 <div class="content" id="skills">
                     <h2 class="contentHeader">What I Offer</h2>
-                    <ul id="skillList">
-                        <li>Experience with the following languages: Python, JavaScript, HTML, CSS, Java, C#, C, RISC-V Assembly and Common Lisp.</li>
-                        <li>Experience with the following technologies: Git, Linux/Unix, SQL (SQLite), NoSQL (MongoDB, Cloud Firestore), Android Studio and Unity.</li>
-                        <li>Knowledge of algorithms, data structures, software engineering principles, computer architecture/organization and database management/design.</li>
-                        <li>I am eager to learn</li>
-                        <li>I am persistent and willing to work through any challenges that come up</li>
-                        <li>I have a strong attention to detail.</li>
-                        <li>Excellent communication skills.</li>
-                    </ul>
+                    <div class="historyGroup">
+                        <ul id="skillList">
+                            <li>Experience with the following languages: Python, JavaScript, HTML, CSS, Java, C#, C, RISC-V Assembly and Common Lisp.</li>
+                            <li>Experience with the following technologies: Git, Linux/Unix, SQL (SQLite), NoSQL (MongoDB, Cloud Firestore), Android Studio and Unity.</li>
+                            <li>Knowledge of algorithms, data structures, software engineering principles, computer architecture and organization, database management and design.</li>
+                            <li>I am persistent and willing to work through any challenges that come up</li>
+                            <li>I have a strong attention to detail.</li>
+                            <li>Excellent communication skills.</li>
+                            <li>I am eager to learn</li>
+                        </ul>
+                </div>
                 </div>
             </div>
         </div>
